[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mysoly-easy-pass-gen"
dynamic = ["version"]
version = "0.5.0"
description = "A very basic and fast password generator."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name="Halil", email="halil@mysoly.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "colorama",
    "pyperclip",
]

[project.urls]
Homepage = "https://github.com/halilunsalls/easy-pass-gen"
Issues = "https://github.com/halilunsalls/easy-pass-gen/issues"

[project.scripts]
easy-pass-gen = "easy_pass_gen.cli:main"

[tool.hatch.version]
path = "src/easy_pass_gen/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/easy_pass_gen"]
include = [
  "src/easy_pass_gen/*.py",
]
